# penentuan-gelombang-pecah

./: .gitignore  CMakeLists.txt  README.md
include/: wave_calc.h
src/: main.cpp  wave_calc.cpp
